corrected a tag in line 16 of index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li> <a href="LifeCycle.html">Life Cycle of Stars</a> </li>
         <li> <a href="Planets.html">Planets</a> </li>
         <li> <a href="BlackHole.html">BlackHole</a> </li>
-        <li> <a href="Darkmatter.html">Dark Matter<a> </li>
+        <li> <a href="Darkmatter.html">Dark Matter</a> </li>
         <li> <a href="Darkenergy.html">Dark Energy</a> </li>
     </ul>
     <div id="frame">
